--- a/.jshintrc
+++ b/.jshintrc
@@ -42,7 +42,7 @@
   "boss"          : false,     // true: Tolerate assignments where comparisons would be expected
   "debug"         : false,     // true: Allow debugger statements e.g. browser breakpoints.
   "eqnull"        : false,     // true: Tolerate use of `== null`
-  "esversion"     : 5,         // {int} Specify the ECMAScript version to which the code must adhere.
+  "esversion"     : 6,         // {int} Specify the ECMAScript version to which the code must adhere.
   "moz"           : false,     // true: Allow Mozilla specific syntax (extends and overrides esnext features)
   // (ex: `for each`, multiple try/catch, function expression…)
   "evil"          : false,     // true: Tolerate use of `eval` and `new Function()`
@@ -74,7 +74,7 @@
   "jquery"        : false,    // jQuery
   "mocha"         : true,     // Mocha
   "mootools"      : false,    // MooTools
-  "node"          : false,    // Node.js
+  "node"          : true,    // Node.js
   "nonstandard"   : false,    // Widely adopted globals (escape, unescape, etc)
   "phantom"       : false,    // PhantomJS
   "prototypejs"   : false,    // Prototype and Scriptaculous
